--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,19 @@
+body{
+    background-image: url("../assets/images/background123.jpg");
+}
 #main {
     background-image: url("../assets/images/Background@2x.png");
     border: 4px solid rgba(100, 100, 100);
     width: 800px;
+    margin-left: 30%;
 }
 
+h1{
+    color: rgb(133, 47, 47);
+    font-size: 50px;
+    text-align: center;
+
+}
 #infos {
     width: 800px;
     display: flex;
@@ -29,6 +39,7 @@
     grid-template-columns: repeat(9, 1fr);
     /* Pour contraindre la hauteur des lignes */
     grid-auto-rows: 80px;
+    
 }
 
 #grille div {
@@ -70,4 +81,5 @@
 .cookieCachee {
     display:none;
 }
+
 
